<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_xlarge"
        android:text="@string/label_even_horizonal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_common_size_xlarge"
            android:layout_margin="@dimen/padding_small"
            android:layout_weight="1"
            android:background="@color/FlatLightGreen"
            android:gravity="center"
            android:text="@string/label_view01"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_common_size_xlarge"
            android:layout_margin="@dimen/padding_small"
            android:layout_weight="1"
            android:background="@color/FlatLightGreen"
            android:gravity="center"
            android:text="@string/label_view02"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_common_size_xlarge"
            android:layout_margin="@dimen/padding_small"
            android:layout_weight="1"
            android:background="@color/FlatLightGreen"
            android:gravity="center"
            android:text="@string/label_view03"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_xlarge"
        android:text="@string/label_even_vertical" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="@dimen/layout_common_size_xlarge"
            android:layout_height="0dp"
            android:layout_margin="@dimen/padding_small"
            android:layout_weight="1"
            android:background="@color/FlatLightYellow"
            android:gravity="center"
            android:text="@string/label_view01"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="@dimen/layout_common_size_xlarge"
            android:layout_height="0dp"
            android:layout_margin="@dimen/padding_small"
            android:layout_weight="1"
            android:background="@color/FlatLightYellow"
            android:gravity="center"
            android:text="@string/label_view02"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="@dimen/layout_common_size_xlarge"
            android:layout_height="0dp"
            android:layout_margin="@dimen/padding_small"
            android:layout_weight="1"
            android:background="@color/FlatLightYellow"
            android:gravity="center"
            android:text="@string/label_view03"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>