<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_large" >

        <View
            android:layout_width="@dimen/layout_common_size_medium"
            android:layout_height="@dimen/layout_common_size_small"
            android:background="@color/FlatDarkGlay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_large"
            android:gravity="center_vertical"
            android:text="@string/label_background"
            android:textSize="12sp" />

        <View
            android:layout_width="@dimen/layout_common_size_medium"
            android:layout_height="@dimen/layout_common_size_small"
            android:background="@color/FlatLightGreen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_view"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_xlarge"
        android:text="@string/label_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/FlatDarkGlay" >

            <TextView
                android:layout_width="@dimen/layout_common_size_xlarge"
                android:layout_height="@dimen/layout_common_size_xlarge"
                android:layout_marginTop="@dimen/padding_medium"
                android:background="@color/FlatLightGreen"
                android:gravity="center"
                android:text="@string/label_top"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/FlatDarkGlay" >

            <TextView
                android:layout_width="@dimen/layout_common_size_xlarge"
                android:layout_height="@dimen/layout_common_size_xlarge"
                android:layout_marginLeft="@dimen/padding_medium"
                android:background="@color/FlatLightGreen"
                android:gravity="center"
                android:text="@string/label_left"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/FlatDarkGlay" >

            <TextView
                android:layout_width="@dimen/layout_common_size_xlarge"
                android:layout_height="@dimen/layout_common_size_xlarge"
                android:layout_marginBottom="@dimen/padding_medium"
                android:background="@color/FlatLightGreen"
                android:gravity="center"
                android:text="@string/label_bottom"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/FlatDarkGlay" >

            <TextView
                android:layout_width="@dimen/layout_common_size_xlarge"
                android:layout_height="@dimen/layout_common_size_xlarge"
                android:layout_marginRight="@dimen/padding_medium"
                android:background="@color/FlatLightGreen"
                android:gravity="center"
                android:text="@string/label_right"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_xlarge"
        android:text="@string/label_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/FlatDarkGlay" >

            <TextView
                android:layout_width="@dimen/layout_common_size_xlarge"
                android:layout_height="@dimen/layout_common_size_xlarge"
                android:background="@color/FlatLightGreen"
                android:gravity="center"
                android:paddingTop="@dimen/padding_xlarge"
                android:text="@string/label_top"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/FlatDarkGlay" >

            <TextView
                android:layout_width="@dimen/layout_common_size_xlarge"
                android:layout_height="@dimen/layout_common_size_xlarge"
                android:background="@color/FlatLightGreen"
                android:gravity="center"
                android:paddingLeft="@dimen/padding_xlarge"
                android:text="@string/label_left"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/FlatDarkGlay" >

            <TextView
                android:layout_width="@dimen/layout_common_size_xlarge"
                android:layout_height="@dimen/layout_common_size_xlarge"
                android:background="@color/FlatLightGreen"
                android:gravity="center"
                android:paddingBottom="@dimen/padding_xlarge"
                android:text="@string/label_bottom"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/FlatDarkGlay" >

            <TextView
                android:layout_width="@dimen/layout_common_size_xlarge"
                android:layout_height="@dimen/layout_common_size_xlarge"
                android:background="@color/FlatLightGreen"
                android:gravity="center"
                android:paddingRight="@dimen/padding_xlarge"
                android:text="@string/label_right"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>