<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_large" >

        <View
            android:layout_width="@dimen/layout_common_size_medium"
            android:layout_height="@dimen/layout_common_size_small"
            android:background="@color/FlatDarkGlay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_large"
            android:gravity="center_vertical"
            android:text="@string/label_margineven"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_xlarge"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/layout_common_size_xlarge"
            android:layout_height="@dimen/layout_common_size_xlarge"
            android:background="@color/FlatLightGreen"
            android:gravity="center"
            android:text="@string/label_view01"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_common_size_xlarge"
            android:layout_weight="1"
            android:background="@color/FlatDarkGlay" />

        <TextView
            android:layout_width="@dimen/layout_common_size_xlarge"
            android:layout_height="@dimen/layout_common_size_xlarge"
            android:background="@color/FlatLightYellow"
            android:gravity="center"
            android:text="@string/label_view02"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_xlarge"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/layout_common_size_large"
            android:layout_height="@dimen/layout_common_size_large"
            android:background="@color/FlatLightGreen"
            android:gravity="center"
            android:text="@string/label_view01"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="@dimen/layout_common_size_large"
            android:layout_height="@dimen/layout_common_size_large"
            android:background="@color/FlatLightYellow"
            android:gravity="center"
            android:text="@string/label_view02"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_common_size_large"
            android:layout_weight="1"
            android:background="@color/FlatDarkGlay" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_xlarge"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_common_size_xlarge"
            android:layout_weight="1"
            android:background="@color/FlatDarkGlay" />

        <TextView
            android:layout_width="@dimen/layout_common_size_xlarge"
            android:layout_height="@dimen/layout_common_size_xlarge"
            android:background="@color/FlatLightGreen"
            android:gravity="center"
            android:text="@string/label_view01"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_common_size_xlarge"
            android:layout_weight="1"
            android:background="@color/FlatDarkGlay" />
    </LinearLayout>

</LinearLayout>